# Graficas_2

./: CMakeLists.txt  README.md  imgui.ini
Graficas_2/: CMakeLists.txt
Graficas_2/src/: Graficas_2.cpp  Graficas_2.h  Shader.cpp  Shader.h
Graficas_2/src/BuffersManagement/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
Graficas_2/src/CameraManagement/: Camera.cpp  Camera.h  Ray.cpp  Ray.h
Graficas_2/src/IluminationManagement/: Light.cpp  Light.h  ShadowEngine.cpp  ShadowEngine.h
Graficas_2/src/ModelManagement/: Node.cpp  Node.h  Scene.cpp  Scene.h  Solid.cpp  Solid.h  Texture.cpp  Texture.h
assets/scenes/: BlenderScene.glb  Camp.glb  PBRSpheres.glb
assets/shaders/: RTShader.frag  RTShader.vert  blinnPhongShader.frag  depth.frag  depth.vert  flatShader.frag  gizmoShader.frag  gizmoShader.vert  lambertShader.frag  lineShader.frag  pbrShader.frag  phongShader.frag  planar.frag  planar.vert  standardShader.vert
